k8s/live/frontend/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*"
  gateways:
  - istio-demo
  http:
  - route:
    - destination:
        host: frontend
        subset: live
        port:
          number: 5000
